AC_INIT([enigma2-plugin-extensions-moviecut],[4.3.0],[https://github.com/opendreambox/enigma2-plugin-moviecut/issues])
AM_INIT_AUTOMAKE([foreign])

AM_SILENT_RULES([yes])

AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE

AC_PROG_CXX

AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
meta/Makefile
src_cc/Makefile
src_py/Makefile
])
AC_OUTPUT
